--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
         <body>
            <div class="main-content">
                {{>header}}
+               <p>This site was created by Adinath Joshi. This site uses data from mapbox and weather stack api.</p>
            
            
            <img class="portrait" src="/img/pp.jpg">
